prototype: support raw SQL - WIP
